prevent dragging opened windows out of view

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,7 +10,7 @@
     }
 
     .toolbar{
-        position: absolute; top: 0; right: 0;
+        position: absolute; top: 0; right: 0; z-index: 10000;
         height: 100vh;
         width: 50px;
     }
