--- a/src/app/components/active-items-panel/active-items-panel.component.scss
+++ b/src/app/components/active-items-panel/active-items-panel.component.scss
@@ -1,11 +1,11 @@
 .container{
-    position: absolute; bottom: 0; left: 0;
+    position: fixed; bottom: 0; left: 0;
     z-index: 9999;
     width: 100%;
     min-height: max-content;
-    height: 30px;
+    height: 50px;
     padding-left: 20px;
-    background-color: var(--color-1-lighter);
+    background-color: var(--bg-color-3);
     display: flex;
     flex-direction: row;
     column-gap: 10px;
